--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "license": "CORE",
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
+    "start": "npm run generate-sidebars && docusaurus start",
+    "build": "npm run generate-sidebars && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "generate-sidebars": "node generateSidebars.js"
   },
   "dependencies": {
     "@docusaurus/core": "3.0.1",
@@ -25,8 +26,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.1",
-    "@docusaurus/types": "3.0.1",
     "@docusaurus/tsconfig": "3.0.1",
+    "@docusaurus/types": "3.0.1",
     "@types/react": "^18.2.42",
     "typescript": "~5.3.2"
   },
