--- a/package.json
+++ b/package.json
@@ -2,34 +2,32 @@
   "name": "corepass-docs",
   "version": "1.0.0",
   "private": true,
-  "license": "CORE",
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "npm run generate-sidebars && docusaurus start",
-    "build": "npm run generate-sidebars && docusaurus build",
+    "start": "docusaurus start",
+    "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc",
-    "generate-sidebars": "node generateSidebars.js"
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@docusaurus/core": "3.0.1",
     "@docusaurus/preset-classic": "3.0.1",
     "@mdx-js/react": "^3.0.0",
+    "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.1",
     "@docusaurus/tsconfig": "3.0.1",
     "@docusaurus/types": "3.0.1",
-    "@types/react": "^18.2.42",
-    "typescript": "~5.3.2"
+    "typescript": "~5.2.2"
   },
   "browserslist": {
     "production": [
@@ -38,9 +36,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 3 chrome version",
+      "last 3 firefox version",
+      "last 5 safari version"
     ]
   },
   "engines": {
