--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "corepass-docs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -15,24 +15,25 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "3.1.1",
-    "@docusaurus/preset-classic": "3.1.1",
+    "@docusaurus/core": "3.2.1",
+    "@docusaurus/preset-classic": "3.2.1",
     "@mdx-js/react": "^3.0.1",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-katex": "^7.0.0",
-    "remark-corebc": "^0.1.1",
-    "remark-corepass": "^0.1.3",
-    "remark-fediverse-user": "^0.1.8",
+    "remark-corebc": "^0.1.8",
+    "remark-corepass": "^0.1.9",
+    "remark-currency-formatter": "^0.1.3",
+    "remark-fediverse-user": "^0.1.14",
     "remark-math": "^6.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.1.1",
-    "@docusaurus/tsconfig": "3.1.1",
-    "@docusaurus/types": "3.1.1",
-    "typescript": "~5.3.3"
+    "@docusaurus/module-type-aliases": "3.2.1",
+    "@docusaurus/tsconfig": "3.2.1",
+    "@docusaurus/types": "3.2.1",
+    "typescript": "~5.4.5"
   },
   "browserslist": {
     "production": [
